--- a/traefik/config/ssl_certificates.example.extra.yml
+++ b/traefik/config/ssl_certificates.example.extra.yml
@@ -1,3 +1,7 @@
+# ssl_certificates.yml
+# This file is used to store the SSL certificates for the Traefik server.
+# Simply add the certificates to the certs directory and update the paths below.
+
 tls:
   certificates:
     - certFile: "/etc/traefik/certs/fzryzen.local.crt"
