--- a/public/config.yaml
+++ b/public/config.yaml
@@ -18,53 +18,61 @@ services:
     icon: "FaServer"
     healthCheckUrl: "http://localhost:5173/health"
 
-
 footer:
-  enabled: true                  # Show/hide footer
-  items:
-    - type: "text"
-      content: "© {year} Launchpad"    # Use {year} for current year
+  enabled: true                    # Show/hide footer
+  content: 
     - type: "link"
-      label: "Documentation"
-      url: "https://example.com/docs"
+      label: "Internal Version"
+      url: "https://fzmacair.local"
+      target: "_self"
     - type: "text"
       content: "|"
     - type: "link"
-      label: "GitHub"
-      url: "https://github.com/afzalex/fzlaunchpad"
+      label: "Tailscale Version"
+      url: "https://fzmacair"
+      target: "_self"
+    - type: "text"
+      content: "|"
+    - type: "link"
+      label: "Internet Version"
+      url: "https://fzmacair.afzalex.com"
+      target: "_self"
+
 
 theme:
   backgroundImage:
-    url: "/images/background.jpg"  # Background image URL (e.g., "/images/bg.jpg" or "https://example.com/bg.jpg")
-    opacity: 1                    # Background image opacity (0.0 to 1.0)
+    url: "/images/background3.jpg"  # Background image URL (e.g., "/images/bg.jpg" or "https://example.com/bg.jpg")
+    opacity: 1                      # Background image opacity (0.0 to 1.0)
     position: "center"              # Background position (center, top, bottom, left, right, etc.)
-    size: "cover"                  # Background size (cover, contain, auto, etc.)
-    repeat: "no-repeat"            # Background repeat (no-repeat, repeat, repeat-x, repeat-y)
+    size: "cover"                   # Background size (cover, contain, auto, etc.)
+    repeat: "no-repeat"             # Background repeat (no-repeat, repeat, repeat-x, repeat-y)
   colors:
-    background: "#ecebe4aa"        # Main page background (lightest)
-    cardBackground: "#dddbcdff"     # Service card backgrounds
-    mediumAccent: "#2D531A"      # Borders and medium accents
-    darkAccent: "#EEEEEE"         # Darker borders and accents
-    text: "#071E07"              # Text color (darkest)
-    headerBackground: "#dddbcd99"  # Header background color
-    headerText: "#071E07"        # Header text color
-    footerBackground: "#dddbcd99"  # Footer background color
-    footerText: "#071E07"        # Footer text color
+    background: "#bebfbe"           # Main page background (lightest)
+    cardBackground: "#dedede"       # Service card backgrounds
+    mediumAccent: "#2D531A"         # Borders and medium accents
+    darkAccent: "#EEEEEE"           # Darker borders and accents
+    text: "#071E07"                 # Text color (darkest)
+    headerBackground: "#fcfffeaa"   # Header background color
+    headerText: "#071E07"           # Header text color
+    footerBackground: "#c9c9c9aa"   # Footer background color
+    footerText: "#000000"           # Footer text color
     serviceStatus:
       # HTTP Status Code to Color Mappings
-      "0": "#808080"             # Status code 0 (stopped/unreachable) color
-      "200-299": "#009d24"       # Status codes 200-299 (success) color
-      "300-399": "#3b82f6"       # Status codes 300-399 (redirect) color
-      "401": "#009d24"            # Status code 401 (secured) color
-      "400-499": "#ef4444"       # Status codes 400-499 (client error) color
-      "500-599": "#f59e0b"       # Status codes 500-599 (server error) color
-
+      "0": "#808080"                # Status code 0 (stopped/unreachable) color
+      "401": "#009d24"              # Status code 401 (secured) color
+      "404": "#808080"              # Status code 404 (not available) color
+      "200-299": "#009d24"          # Status codes 200-299 (success) color
+      "300-399": "#3b82f6"          # Status codes 300-399 (redirect) color
+      "400-499": "#ef4444"          # Status codes 400-499 (client error) color
+      "500-599": "#f59e0b"          # Status codes 500-599 (server error) color
+      "checking": "#808080"         # Status code checking (checking) color
 
 statusMapping:
   # HTTP Status Code to Service Status Name Mappings
   "0": "stopped"     
+  "401": "Running (Secured)"
+  "404": "Not Available"
   "200-299": "running"
   "300-399": "uknown"
-  "401": "Running (Secured)"
   "400-499": "error"
   "500-599": "warning"
