Added traefikoidc example

--- a/traefik/config/traefik.yml
+++ b/traefik/config/traefik.yml
@@ -28,5 +28,12 @@ log:
 accessLog:
   # filePath: "stdout"
   format: "common"
-  
+
+
+# # traefik.yml
+# experimental:
+#   plugins:
+#     traefikoidc:
+#       moduleName: github.com/lukaszraczylo/traefikoidc
+#       version: v0.8.13
   
