--- a/immich/public.env
+++ b/immich/public.env
@@ -1,9 +1,9 @@
 NETWORK_NAME=fznetwork
-IMAGE_NAME=fzimmich
 CONTAINER_NAME=fzimmich
 PORT_MAPPING=2283
 
-# You can find documentation for all the supported env variables at https://docs.immich.app/install/environment-variables
+# Redis container name (should match the Redis service container name)
+REDIS_CONTAINER_NAME=fzredis
 
 # The location where your uploaded files are stored
 UPLOAD_LOCATION=./library
