--- a/immich/public.env
+++ b/immich/public.env
@@ -14,3 +14,6 @@ TZ=Asia/Calcutta
 # The Immich version to use. You can pin this to a specific version like "v2.1.0"
 IMMICH_VERSION=v2
 
+# Database configuration
+DB_DATABASE_NAME=immich
+DB_DATA_LOCATION=./.data/postgres-data
