--- a/immich/.env.example
+++ b/immich/.env.example
@@ -1,4 +1,4 @@
 # The values below this line do not need to be changed
 ###################################################################################
 DB_USERNAME=postgres
-DB_DATABASE_NAME=Password@123
+DB_PASSWORD=Password@123
