--- a/immich/public.env
+++ b/immich/public.env
@@ -6,7 +6,7 @@ PORT_MAPPING=2283
 REDIS_CONTAINER_NAME=fzredis
 
 # The location where your uploaded files are stored
-UPLOAD_LOCATION=./library
+UPLOAD_LOCATION=./local/library
 
 # To set a timezone, uncomment the next line and change Etc/UTC to a TZ identifier from this list: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
 TZ=Asia/Calcutta
@@ -16,4 +16,4 @@ IMMICH_VERSION=v2
 
 # Database configuration
 DB_DATABASE_NAME=immich
-DB_DATA_LOCATION=./.data/postgres-data
+DB_DATA_LOCATION=./local/postgres-data
