--- a/public/public.env
+++ b/public/public.env
@@ -1,5 +1,5 @@
 # End file with a new line
 NETWORK_NAME=fznetwork
-IMAGE_NAME=fzpublic
+IMAGE_NAME=afzalex/fzlaunchpad:latest
 CONTAINER_NAME=fzpublic
 # PORT_MAPPING=8080
